<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.huawei.hms.support.hwid.ui.HuaweiIdAuthButton
        android:id="@+id/huaweiIdAuthorizationButton"
        android:layout_width="254dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="216dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/continuewithhuawei"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="204dp"
        android:layout_height="188dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="97dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/huawei" />

    <Button
        android:id="@+id/account_signInCode"
        style="@style/ButtonStyle"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/huawei"
        android:drawableLeft="@drawable/hwid_auth_button_round_white"
        android:text="@string/revokeAccess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/huaweiIdAuthorizationButton" />

    <Button
        android:id="@+id/account_silent_signin"
        style="@style/ButtonStyle"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/huawei"
        android:drawableLeft="@drawable/hwid_auth_button_round_white"
        android:text="@string/silent_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_signout" />

    <Button
        android:id="@+id/account_signout"
        style="@style/ButtonStyle"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/huawei"
        android:drawableLeft="@drawable/hwid_auth_button_round_white"
        android:text="@string/sign_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel_authorization" />

    <Button
        android:id="@+id/cancel_authorization"
        style="@style/ButtonStyle"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/huawei"
        android:drawableLeft="@drawable/hwid_auth_button_round_white"
        android:text="@string/cancel_authorization"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_signInCode" />


</androidx.constraintlayout.widget.ConstraintLayout>